# azure-ids

./: CMakeLists.txt  README.md
include/azure/: iot_hub_client.h
include/common/: constants.h  types.h
include/core/: ml_engine.h  packet_capture.h
include/detection/: brute_force_detector.h  ddos_detector.h  port_scan_detector.h
include/utils/: crypto_utils.h  logger.h
src/: main.cpp
src/azure/: iot_hub_client.cpp
src/core/: ml_engine.cpp  packet_capture.cpp
src/detection/: brute_force_detector.cpp  ddos_detector.cpp  port_scan_detector.cpp
src/utils/: crypto_utils.cpp  logger.cpp
